# graphic_api_shell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
source/: Allocator.cpp  Allocator.h  AutoRef.h  AutoReleasePool.cpp  AutoReleasePool.h  Camera.cpp  Camera.h  Common.cpp  Common.h  D3DContext.cpp  D3DContext.h  D3DWindowsFactory.cpp  D3DWindowsFactory.h  DataBuff.cpp  DataBuff.h  FactoryBase.cpp  FactoryBase.h  File.cpp  File.h  FileUtils.cpp  FileUtils.h  GASStartClass.cpp  GASStartClass.h  ObjectsCreator.cpp  ObjectsCreator.h  Ref.cpp  Ref.h  SceneBase.cpp  SceneBase.h  Scheduler.cpp  Scheduler.h  ScopeObjectsCreator.cpp  ScopeObjectsCreator.h  Thread.cpp  Thread.h  ThreadsPool.cpp  ThreadsPool.h  WindowsFactory.cpp  WindowsFactory.h  WorkingScope.cpp  (+5 more)
tests/: AutoTestsScene.cpp  AutoTestsScene.h  TestSceneBase.cpp  TestSceneBase.h  TestsDelegate.cpp  TestsDelegate.h  main.cpp
